 365.	[bug]		nsupdate -k leaked memory.

 364.	[func]		Added additional-from-{cache,auth}

 363.	[doc]		doc/html was not being maintained so has been removed.

 362.	[bug]		rndc no longer aborts if the configuration file is
			missing an options statement. [RT #209]

 361.	[func]		When the RBT find or chain functions set the name and
			origin for a node that stores the root label
			the name is now set to an empty name, instead of ".",
			to simplify later use of the name and origin by
			dns_name_concatenate(), dns_name_totext() or
			dns_name_format().

 360.	[func]		dns_name_totext() and dns_name_format() now allow
			an empty name to be passed, which is formatted as "@".

 359.	[bug]		dnssec-signzone occasionally signed glue records.

 358.	[cleanup]	Rename the intermediate files used by the dnssec
			programs.

 357.	[bug]		The zone file parser crashed when seeing a quoted
			$INCLUDE.

 356.	[cleanup]	isc_task_send no longer requires event->sender to
			be non-null.

 355.	[func]		Added isc_dir_createunique(), similar to mkdtemp().

 354.	[doc]		Man pages for the dnssec tools are now included in
			the distribution, in doc/man/dnssec.

 353.	[bug]		double increment in lwres/gethost.c:copytobuf().
			(RT# 187)

 352.	[bug]		Race condition in dns_client_t startup could cause
			an assertion failure.

 351.	[bug]		Constructing a response with rcode SERVFAIL to a TSIG
			signed query could crash the server.

 350.	[bug]		Also-notify lists specified in the global options
			block were not correctly reference counted, causing
			a memory leak.

 349.	[bug]		Processing a query with the CD bit set now works
			as expected.

 348.	[func]		New named.conf boolean values 'glue-from-auth' and
			'glue-from-cache' now supported in view and global
			options statement.

 347.	[bug]		Don't crash if when an argument is left off
			options in dig.

 346.	[func]		Add support for .digrc config file, in the
			user's current directory
