@@ -1,3 +1,8 @@
+ 367.   [func]          Allow proper selection of server on nslookup command
+			line.
+
+ 366.   [func]          Allow use of '-' batch file in dig for stdin.
+
  365.	[bug]		nsupdate -k leaked memory.
 
  364.	[func]		Added additional-from-{cache,auth}
